<resources>
    <string name="app_name">theblog</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="crt_ac">Create Acount</string>
    <string name="date">Date Created</string>
    <string name="post">Post Title</string>
    <string name="postdesc">Post Description</string>
    <string name="postTit">Post Title</string>
</resources>